# mango

./: .gitignore  README.md  RUN.md  pyproject.toml
svc/api/: Dockerfile  alembic.ini  pyproject.toml
svc/api/mg_api/: client.py  main.py
svc/api/mg_api/core/: api.py  api_factory.py  config.py  ioc.py  provider.py  sio.py
svc/api/mg_api/core/sio/: app.py  di.py
svc/api/mg_api/dto/: __init__.py  auth.py  chat.py  general.py  message.py  user.py
svc/api/mg_api/errors/: __init__.py  handlers.py  http.py
svc/api/mg_api/infra/db/: config.py  provider.py  repo.py
svc/api/mg_api/infra/db/migrations/: env.py
svc/api/mg_api/infra/db/models/: __init__.py  chat.py  message.py  user.py  user_chat.py
svc/api/mg_api/infra/sio/: __init__.py  app.py  connect_ws.py  di.py  provider.py  send_event.py  sid_registry.py
svc/api/mg_api/repo/: chat.py  message.py  provider.py  user.py
svc/api/mg_api/router/: __init__.py  auth.py  chat.py  message.py  sio.py  user.py
svc/api/mg_api/svc/auth/: errors.py  guard.py  provider.py  pwd_crypt.py
svc/api/mg_api/svc/chat/: provider.py  service.py
svc/api/mg_api/svc/crud/: crud_abc.py  crud_svc.py  list_abc.py  list_svc.py  query_utils.py  router.py  types_.py
svc/api/mg_api/svc/jwt/: abstract.py  config.py  errors.py  schemas.py  service.py
svc/api/mg_api/svc/message/: provider.py  service.py
svc/api/mg_api/svc/user/: provider.py  service.py
svc/api/mg_api/utils/crud/: crud_abc.py  crud_svc.py  ctrl_factory.py  list_abc.py  list_svc.py  query_utils.py  types_.py
svc/api/mg_api/utils/pydantic/: base_model.py
(+37 files in other folders)
