[tool.poetry]
name = "mango"
version = "0.1.0"
description = ""
authors = ["Артур Лагунов <a.lagunov@ktsstudio.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
dishka = "^1.5.0"
alembic = "^1.15.1"
pydantic-settings = "^2.8.1"
asyncpg = "^0.30.0"
uvicorn = "^0.34.0"
yarl = "^1.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
